# context-reviewer

./: .gitignore  LICENSE  NOTICE  README.md  pyproject.toml
context_reviewer/: __init__.py  __main__.py  cli.py  context_tree.py  extractor.py
context_reviewer/agents/: __init__.py
context_reviewer/agents/claude/: __init__.py  _edit_extraction.py  _read_extraction.py  _search_extraction.py  context.py  extractor.py  messages.py  paths.py  presentation.py  utils.py  viewer.py
context_reviewer/agents/cursor/: __init__.py  _edit_extraction.py  _read_extraction.py  _shared.py  content_lookup.py  context.py  db.py  extractor.py  messages.py  paths.py  presentation.py  tool_results.py  utils.py  viewer.py
context_reviewer/context/: __init__.py  models.py
context_reviewer/render/: __init__.py  activity.py  lines.py  recency.py  terminal.py  tree.py
tests/: claude_fixtures.py  test_claude_cli.py  test_claude_extractor.py  test_claude_messages.py  test_cli.py  test_context_tree.py  test_tool_results.py
tests/fixtures/claude/: test-session-id.jsonl
tests/fixtures/claude/test-session-id/subagents/: agent-abc123.jsonl
